[gd_scene format=3 uid="uid://c3bg1b1evi10w"]

[ext_resource type="Script" uid="uid://ua1m3v2t434" path="res://ui/scripts/mask.gd" id="1_cshks"]
[ext_resource type="Texture2D" uid="uid://bkat28avgc4rm" path="res://assets/hud/spr-mascara-cores-original.png" id="2_eiqc7"]
[ext_resource type="Texture2D" uid="uid://di2s6cl2rhpu" path="res://assets/hud/mask/spr-mascara-linha-100.png" id="3_nysuh"]

[node name="MainMask" type="TextureRect" unique_id=1435585294]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -451.0
offset_top = -476.5
offset_right = 451.0
offset_bottom = 476.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset_ratio = Vector2(0.5, 0.5)
mouse_filter = 0
mouse_default_cursor_shape = 2
texture = ExtResource("2_eiqc7")
script = ExtResource("1_cshks")

[node name="Mask2" type="TextureRect" parent="." unique_id=1585989879]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -451.0
offset_top = -476.5
offset_right = 451.0
offset_bottom = 476.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_nysuh")

[node name="PreviewLayer" type="TextureRect" parent="." unique_id=444104695]
visible = false
modulate = Color(1, 1, 1, 0.43137255)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
